used List.of() for FALLBACK_LOCATIONS